# django-shop

./: .env.example  LICENSE  README.md  pyproject.toml
cart/: cart.py  views.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_category_order.py
config/: settings.py  urls.py
static/img/: elektronika.avif  knigi.avif  sport.avif
static/js/: bootstrap.bundle.min.js
templates/: base.html
templates/cart/: cart.html
templates/catalog/: categories_list.html  category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  confirm_delete_product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
templates/includes/: inc_header.html
users/: admin.py  models.py
users/management/commands/: csu.py  fill_db.py
users/migrations/: 0001_initial.py
